tests/snapshots/run_wpt_conformance__litert_prelu_float32_1D_tensors.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 57
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "prelu.https.any.js",
    "prelu float32 1D tensors",
    "litert",
    "PASS",
)
